test/classes/ferguson/override-intents.good
override-intents.chpl:82: error: Child.in_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:8: error: base method uses 'in' intent
override-intents.chpl:82: error: overriding method uses 'const' intent
override-intents.chpl:83: error: Child.in_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:9: error: base method uses 'in' intent
override-intents.chpl:83: error: overriding method uses 'const in' intent
override-intents.chpl:86: error: Child.in_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:12: error: base method uses 'in' intent
override-intents.chpl:86: error: overriding method uses default intent
override-intents.chpl:93: error: Child.out_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:19: error: base method uses 'out' intent
override-intents.chpl:93: error: overriding method uses 'ref' intent
override-intents.chpl:94: error: Child.out_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:20: error: base method uses 'out' intent
override-intents.chpl:94: error: overriding method uses 'const ref' intent
override-intents.chpl:106: error: Child.const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:32: error: base method uses 'const' intent
override-intents.chpl:106: error: overriding method uses 'in' intent
override-intents.chpl:110: error: Child.const_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:36: error: base method uses 'const' intent
override-intents.chpl:110: error: overriding method uses 'const in' intent
override-intents.chpl:113: error: Child.const_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:39: error: base method uses 'const' intent
override-intents.chpl:113: error: overriding method uses default intent
override-intents.chpl:115: error: Child.const_in_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:41: error: base method uses 'const in' intent
override-intents.chpl:115: error: overriding method uses 'in' intent
override-intents.chpl:118: error: Child.const_in_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:44: error: base method uses 'const in' intent
override-intents.chpl:118: error: overriding method uses 'const' intent
override-intents.chpl:122: error: Child.const_in_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:48: error: base method uses 'const in' intent
override-intents.chpl:122: error: overriding method uses default intent
override-intents.chpl:125: error: Child.ref_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:51: error: base method uses 'ref' intent
override-intents.chpl:125: error: overriding method uses 'out' intent
override-intents.chpl:130: error: Child.ref_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:56: error: base method uses 'ref' intent
override-intents.chpl:130: error: overriding method uses 'const ref' intent
override-intents.chpl:134: error: Child.const_ref_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:60: error: base method uses 'const ref' intent
override-intents.chpl:134: error: overriding method uses 'out' intent
override-intents.chpl:138: error: Child.const_ref_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:64: error: base method uses 'const ref' intent
override-intents.chpl:138: error: overriding method uses 'ref' intent
override-intents.chpl:142: error: Child.blank_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:68: error: base method uses default intent
override-intents.chpl:142: error: overriding method uses 'in' intent
override-intents.chpl:145: error: Child.blank_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:71: error: base method uses default intent
override-intents.chpl:145: error: overriding method uses 'const' intent
override-intents.chpl:146: error: Child.blank_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:72: error: base method uses default intent
override-intents.chpl:146: error: overriding method uses 'const in' intent
override-intents.chpl:80: error: Child.in_out override keyword present but no superclass method matches signature to override
override-intents.chpl:80: error: Child.in_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:6: error: base method uses 'in' intent
override-intents.chpl:80: error: overriding method uses 'out' intent
override-intents.chpl:81: error: Child.in_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:81: error: Child.in_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:7: error: base method uses 'in' intent
override-intents.chpl:81: error: overriding method uses 'inout' intent
override-intents.chpl:84: error: Child.in_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:84: error: Child.in_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:10: error: base method uses 'in' intent
override-intents.chpl:84: error: overriding method uses 'ref' intent
override-intents.chpl:85: error: Child.in_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:85: error: Child.in_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:11: error: base method uses 'in' intent
override-intents.chpl:85: error: overriding method uses 'const ref' intent
override-intents.chpl:88: error: Child.out_in override keyword present but no superclass method matches signature to override
override-intents.chpl:88: error: Child.out_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:14: error: base method uses 'out' intent
override-intents.chpl:88: error: overriding method uses 'in' intent
override-intents.chpl:90: error: Child.out_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:90: error: Child.out_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:16: error: base method uses 'out' intent
override-intents.chpl:90: error: overriding method uses 'inout' intent
override-intents.chpl:91: error: Child.out_const override keyword present but no superclass method matches signature to override
override-intents.chpl:91: error: Child.out_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:17: error: base method uses 'out' intent
override-intents.chpl:91: error: overriding method uses 'const' intent
override-intents.chpl:92: error: Child.out_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:92: error: Child.out_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:18: error: base method uses 'out' intent
override-intents.chpl:92: error: overriding method uses 'const in' intent
override-intents.chpl:95: error: Child.out_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:95: error: Child.out_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:21: error: base method uses 'out' intent
override-intents.chpl:95: error: overriding method uses default intent
override-intents.chpl:97: error: Child.inout_in override keyword present but no superclass method matches signature to override
override-intents.chpl:97: error: Child.inout_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:23: error: base method uses 'inout' intent
override-intents.chpl:97: error: overriding method uses 'in' intent
override-intents.chpl:98: error: Child.inout_out override keyword present but no superclass method matches signature to override
override-intents.chpl:98: error: Child.inout_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:24: error: base method uses 'inout' intent
override-intents.chpl:98: error: overriding method uses 'out' intent
override-intents.chpl:100: error: Child.inout_const override keyword present but no superclass method matches signature to override
override-intents.chpl:100: error: Child.inout_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:26: error: base method uses 'inout' intent
override-intents.chpl:100: error: overriding method uses 'const' intent
override-intents.chpl:101: error: Child.inout_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:101: error: Child.inout_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:27: error: base method uses 'inout' intent
override-intents.chpl:101: error: overriding method uses 'const in' intent
override-intents.chpl:102: error: Child.inout_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:102: error: Child.inout_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:28: error: base method uses 'inout' intent
override-intents.chpl:102: error: overriding method uses 'ref' intent
override-intents.chpl:103: error: Child.inout_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:103: error: Child.inout_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:29: error: base method uses 'inout' intent
override-intents.chpl:103: error: overriding method uses 'const ref' intent
override-intents.chpl:104: error: Child.inout_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:104: error: Child.inout_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:30: error: base method uses 'inout' intent
override-intents.chpl:104: error: overriding method uses default intent
override-intents.chpl:107: error: Child.const_out override keyword present but no superclass method matches signature to override
override-intents.chpl:107: error: Child.const_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:33: error: base method uses 'const' intent
override-intents.chpl:107: error: overriding method uses 'out' intent
override-intents.chpl:108: error: Child.const_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:108: error: Child.const_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:34: error: base method uses 'const' intent
override-intents.chpl:108: error: overriding method uses 'inout' intent
override-intents.chpl:111: error: Child.const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:111: error: Child.const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:37: error: base method uses 'const' intent
override-intents.chpl:111: error: overriding method uses 'ref' intent
override-intents.chpl:112: error: Child.const_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:112: error: Child.const_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:38: error: base method uses 'const' intent
override-intents.chpl:112: error: overriding method uses 'const ref' intent
override-intents.chpl:116: error: Child.const_in_out override keyword present but no superclass method matches signature to override
override-intents.chpl:116: error: Child.const_in_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:42: error: base method uses 'const in' intent
override-intents.chpl:116: error: overriding method uses 'out' intent
override-intents.chpl:117: error: Child.const_in_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:117: error: Child.const_in_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:43: error: base method uses 'const in' intent
override-intents.chpl:117: error: overriding method uses 'inout' intent
override-intents.chpl:120: error: Child.const_in_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:120: error: Child.const_in_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:46: error: base method uses 'const in' intent
override-intents.chpl:120: error: overriding method uses 'ref' intent
override-intents.chpl:121: error: Child.const_in_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:121: error: Child.const_in_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:47: error: base method uses 'const in' intent
override-intents.chpl:121: error: overriding method uses 'const ref' intent
override-intents.chpl:124: error: Child.ref_in override keyword present but no superclass method matches signature to override
override-intents.chpl:124: error: Child.ref_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:50: error: base method uses 'ref' intent
override-intents.chpl:124: error: overriding method uses 'in' intent
override-intents.chpl:126: error: Child.ref_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:126: error: Child.ref_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:52: error: base method uses 'ref' intent
override-intents.chpl:126: error: overriding method uses 'inout' intent
override-intents.chpl:127: error: Child.ref_const override keyword present but no superclass method matches signature to override
override-intents.chpl:127: error: Child.ref_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:53: error: base method uses 'ref' intent
override-intents.chpl:127: error: overriding method uses 'const' intent
override-intents.chpl:128: error: Child.ref_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:128: error: Child.ref_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:54: error: base method uses 'ref' intent
override-intents.chpl:128: error: overriding method uses 'const in' intent
override-intents.chpl:131: error: Child.ref_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:131: error: Child.ref_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:57: error: base method uses 'ref' intent
override-intents.chpl:131: error: overriding method uses default intent
override-intents.chpl:133: error: Child.const_ref_in override keyword present but no superclass method matches signature to override
override-intents.chpl:133: error: Child.const_ref_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:59: error: base method uses 'const ref' intent
override-intents.chpl:133: error: overriding method uses 'in' intent
override-intents.chpl:135: error: Child.const_ref_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:135: error: Child.const_ref_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:61: error: base method uses 'const ref' intent
override-intents.chpl:135: error: overriding method uses 'inout' intent
override-intents.chpl:136: error: Child.const_ref_const override keyword present but no superclass method matches signature to override
override-intents.chpl:136: error: Child.const_ref_const conflicting intent for argument 'arg' in overriding method
override-intents.chpl:62: error: base method uses 'const ref' intent
override-intents.chpl:136: error: overriding method uses 'const' intent
override-intents.chpl:137: error: Child.const_ref_const_in override keyword present but no superclass method matches signature to override
override-intents.chpl:137: error: Child.const_ref_const_in conflicting intent for argument 'arg' in overriding method
override-intents.chpl:63: error: base method uses 'const ref' intent
override-intents.chpl:137: error: overriding method uses 'const in' intent
override-intents.chpl:140: error: Child.const_ref_blank override keyword present but no superclass method matches signature to override
override-intents.chpl:140: error: Child.const_ref_blank conflicting intent for argument 'arg' in overriding method
override-intents.chpl:66: error: base method uses 'const ref' intent
override-intents.chpl:140: error: overriding method uses default intent
override-intents.chpl:143: error: Child.blank_out override keyword present but no superclass method matches signature to override
override-intents.chpl:143: error: Child.blank_out conflicting intent for argument 'arg' in overriding method
override-intents.chpl:69: error: base method uses default intent
override-intents.chpl:143: error: overriding method uses 'out' intent
override-intents.chpl:144: error: Child.blank_inout override keyword present but no superclass method matches signature to override
override-intents.chpl:144: error: Child.blank_inout conflicting intent for argument 'arg' in overriding method
override-intents.chpl:70: error: base method uses default intent
override-intents.chpl:144: error: overriding method uses 'inout' intent
override-intents.chpl:147: error: Child.blank_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:147: error: Child.blank_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:73: error: base method uses default intent
override-intents.chpl:147: error: overriding method uses 'ref' intent
override-intents.chpl:148: error: Child.blank_const_ref override keyword present but no superclass method matches signature to override
override-intents.chpl:148: error: Child.blank_const_ref conflicting intent for argument 'arg' in overriding method
override-intents.chpl:74: error: base method uses default intent
override-intents.chpl:148: error: overriding method uses 'const ref' intent
